--- a/mods/macaws-lights-and-lamps.pw.toml
+++ b/mods/macaws-lights-and-lamps.pw.toml
@@ -1,13 +1,13 @@
 name = "Macaw's Lights and Lamps"
-filename = "mcw-lights-1.0.4-mc1.18.2.jar"
+filename = "mcw-lights-1.0.5-mc1.18.2forge.jar"
 side = "both"
 
 [download]
 hash-format = "sha1"
-hash = "d1055c6b79fd90f6865136c99fbdf96c3f6fe7d6"
+hash = "89cde79db21c8db52a0861fabdc36b1b17ff7cc4"
 mode = "metadata:curseforge"
 
 [update]
 [update.curseforge]
-file-id = 3911487
+file-id = 4358260
 project-id = 502372
