--- a/mods/drippy-loading-screen.pw.toml
+++ b/mods/drippy-loading-screen.pw.toml
@@ -1,13 +1,13 @@
 name = "Drippy Loading Screen [Forge]"
-filename = "drippyloadingscreen_forge_1.6.6_MC_1.18-1.18.2.jar"
+filename = "drippyloadingscreen_forge_2.1.1_MC_1.18.2.jar"
 side = "both"
 
 [download]
 hash-format = "sha1"
-hash = "b134f3fe0b3cb346462699ccc70d41d2a1228d4c"
+hash = "9ce8e8ddef60b0e633e05a7f16991b706ab78a8a"
 mode = "metadata:curseforge"
 
 [update]
 [update.curseforge]
-file-id = 4125627
+file-id = 4379214
 project-id = 511770
