--- a/mods/balm.pw.toml
+++ b/mods/balm.pw.toml
@@ -1,13 +1,13 @@
 name = "Balm (Forge Edition)"
-filename = "balm-3.2.1+0.jar"
+filename = "balm-3.2.6.jar"
 side = "both"
 
 [download]
 hash-format = "sha1"
-hash = "5ac25b6330d31bf331175966b93d8b06eddfdbec"
+hash = "a0be48540d7d9661db8db54cbc96a94b59793fcb"
 mode = "metadata:curseforge"
 
 [update]
 [update.curseforge]
-file-id = 4162605
+file-id = 4442615
 project-id = 531761
