--- a/mods/create-enchantment-industry.pw.toml
+++ b/mods/create-enchantment-industry.pw.toml
@@ -1,13 +1,13 @@
 name = "Create Enchantment Industry"
-filename = "create_enchantment_industry-1.20.1-for-create-0.5.1.e-1.2.6.d.jar"
+filename = "create_enchantment_industry-1.20.1-for-create-0.5.1.e-1.2.7.jar"
 side = "both"
 
 [download]
 hash-format = "sha1"
-hash = "62d26dafef703e1dc0b1221562e2560f9d876a48"
+hash = "5e4845e8c221487d37233947eb398ffec173d2b2"
 mode = "metadata:curseforge"
 
 [update]
 [update.curseforge]
-file-id = 4764843
+file-id = 4782832
 project-id = 688768
