--- a/mods/immediatelyfast.pw.toml
+++ b/mods/immediatelyfast.pw.toml
@@ -1,13 +1,13 @@
 name = "ImmediatelyFast"
 filename = "ImmediatelyFast-1.2.6+1.20.2.jar"
-side = "client"
+side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/5ZwdcRci/versions/mbeaDZtb/ImmediatelyFast-1.2.6%2B1.20.2.jar"
 hash-format = "sha1"
 hash = "13b4fd8f0214d36a01b2c874f0f88c9ddb2dd556"
+mode = "metadata:curseforge"
 
 [update]
-[update.modrinth]
-mod-id = "5ZwdcRci"
-version = "mbeaDZtb"
+[update.curseforge]
+file-id = 4776117
+project-id = 686911
