--- a/mods/craterlib.pw.toml
+++ b/mods/craterlib.pw.toml
@@ -3,11 +3,11 @@ filename = "CraterLib-forge-1.20-1.0.2.jar"
 side = "both"
 
 [download]
+url = "https://cdn.modrinth.com/data/Nn8Wasaq/versions/Ml4m8ilJ/CraterLib-forge-1.20-1.0.2.jar"
 hash-format = "sha1"
 hash = "120cf728034a6df7a8fab9e8e3a0b9d62b431793"
-mode = "metadata:curseforge"
 
 [update]
-[update.curseforge]
-file-id = 4674468
-project-id = 867099
+[update.modrinth]
+mod-id = "Nn8Wasaq"
+version = "Ml4m8ilJ"
