--- a/mods/rechiseled.pw.toml
+++ b/mods/rechiseled.pw.toml
@@ -1,13 +1,13 @@
 name = "Rechiseled"
-filename = "rechiseled-1.1.4a-forge-mc1.20.jar"
+filename = "rechiseled-1.1.5-forge-mc1.20.jar"
 side = "both"
 
 [download]
 hash-format = "sha1"
-hash = "0744d0ada3deb2557395fba03bb75f5b8cc439e8"
+hash = "31f27910cb96fe10d144152199ecf04481bde11e"
 mode = "metadata:curseforge"
 
 [update]
 [update.curseforge]
-file-id = 4783598
+file-id = 4803738
 project-id = 558998
