--- a/mods/colorful-hearts.pw.toml
+++ b/mods/colorful-hearts.pw.toml
@@ -1,6 +1,6 @@
 name = "Colorful Hearts"
 filename = "colorfulhearts-forge-1.20.1-4.0.3.jar"
-side = "client"
+side = "both"
 
 [download]
 hash-format = "sha1"
