--- a/mods/create-encased.pw.toml
+++ b/mods/create-encased.pw.toml
@@ -1,13 +1,13 @@
 name = "Create Encased"
-filename = "CreateCasing-1.20.1-1.4.2-fix1.jar"
+filename = "CreateCasing-1.20.1-1.5.0.jar"
 side = "both"
 
 [download]
 hash-format = "sha1"
-hash = "1be2b2916bb977fb1eeb95c86df777c297f730a4"
+hash = "4209bebae8f1ce66906ac8a5ec1fd1db052a89c7"
 mode = "metadata:curseforge"
 
 [update]
 [update.curseforge]
-file-id = 4768625
+file-id = 4804440
 project-id = 829380
