--- a/mods/dramatic-doors.pw.toml
+++ b/mods/dramatic-doors.pw.toml
@@ -1,13 +1,13 @@
 name = "Dramatic Doors"
-filename = "DramaticDoors-QuiFabrge-1.20.1-3.1.0.jar"
+filename = "DramaticDoors-QuiFabrge-1.20.1-3.1.0_1.jar"
 side = "both"
 
 [download]
 hash-format = "sha1"
-hash = "cd113501928a17c9da5b32193f53abb65106f2ad"
+hash = "d325290592c44dca708213a614952442d02c2a61"
 mode = "metadata:curseforge"
 
 [update]
 [update.curseforge]
-file-id = 4804097
+file-id = 4805653
 project-id = 380617
