--- a/mods/kotlin-for-forge.pw.toml
+++ b/mods/kotlin-for-forge.pw.toml
@@ -3,11 +3,11 @@ filename = "kotlinforforge-4.5.0-all.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/ordsPcFz/versions/jxYJOIFz/kotlinforforge-4.5.0-all.jar"
 hash-format = "sha1"
 hash = "42184b6d60c9aa6dc14f79526a2f79e3c8661007"
+mode = "metadata:curseforge"
 
 [update]
-[update.modrinth]
-mod-id = "ordsPcFz"
-version = "jxYJOIFz"
+[update.curseforge]
+file-id = 4778283
+project-id = 351264
