new create stuff

--- a/mods/rechiseled.pw.toml
+++ b/mods/rechiseled.pw.toml
@@ -1,13 +1,13 @@
 name = "Rechiseled"
-filename = "rechiseled-1.1.5-forge-mc1.20.jar"
+filename = "rechiseled-1.1.5a-forge-mc1.20.jar"
 side = "both"
 
 [download]
 hash-format = "sha1"
-hash = "31f27910cb96fe10d144152199ecf04481bde11e"
+hash = "a02efe1ad21ae9027d0d3bf13307a5db436e2b6b"
 mode = "metadata:curseforge"
 
 [update]
 [update.curseforge]
-file-id = 4803738
+file-id = 4811802
 project-id = 558998
