--- a/mods/crafting+.pw.toml
+++ b/mods/crafting+.pw.toml
@@ -1,6 +1,7 @@
 name = "Crafting+"
 filename = "crafting+-1.1.jar"
 side = "both"
+pin = true
 
 [download]
 url = "https://cdn.modrinth.com/data/sjUk6lfU/versions/VvG6I9D2/crafting%2B-1.1.jar"
