--- a/mods/entityculling.pw.toml
+++ b/mods/entityculling.pw.toml
@@ -1,5 +1,6 @@
 name = "entityculling"
 filename = "entityculling-forge-1.6.2-mc1.20.1.jar"
+pin = true
 
 [download]
 url = "https://cdn.modrinth.com/data/NNAgCjsB/versions/17Hi340V/entityculling-forge-1.6.2-mc1.20.1.jar"
