--- a/mods/aether.pw.toml
+++ b/mods/aether.pw.toml
@@ -1,13 +1,13 @@
 name = "The Aether"
-filename = "aether-1.20.1-1.0.0-beta.1.3-neoforge.jar"
+filename = "aether-1.20.1-1.0.0-beta.1.4-neoforge.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/YhmgMVyu/versions/nI1C8SsD/aether-1.20.1-1.0.0-beta.1.3-neoforge.jar"
+url = "https://cdn.modrinth.com/data/YhmgMVyu/versions/VItLcc9a/aether-1.20.1-1.0.0-beta.1.4-neoforge.jar"
 hash-format = "sha1"
-hash = "1e450400e158f6198ac7c77d680bc361d09bc0a0"
+hash = "5a56152822de89eac9105ee3ff52a82f7ef74cff"
 
 [update]
 [update.modrinth]
 mod-id = "YhmgMVyu"
-version = "nI1C8SsD"
+version = "VItLcc9a"
