--- a/mods/choicetheorems-overhauled-village.pw.toml
+++ b/mods/choicetheorems-overhauled-village.pw.toml
@@ -1,13 +1,13 @@
 name = "ChoiceTheorem's Overhauled Village"
-filename = "ctov-3.3.5a.jar"
+filename = "ctov-3.3.6.jar"
 side = "both"
 
 [download]
 hash-format = "sha1"
-hash = "02e5c5e25d72eed79dd3c64635b50ad771abb177"
+hash = "9fe2efeb1f2bff5309191c088437d0c6b4121e82"
 mode = "metadata:curseforge"
 
 [update]
 [update.curseforge]
-file-id = 4775350
+file-id = 4823685
 project-id = 623908
