--- a/mods/vinery.pw.toml
+++ b/mods/vinery.pw.toml
@@ -1,13 +1,13 @@
 name = "[Let's Do] Vinery"
-filename = "Vinery - 1.4.5 - FORGE - 1.20.1.jar"
+filename = "letsdo-vinery-forge-1.4.6.jar"
 side = "both"
 
 [download]
 hash-format = "sha1"
-hash = "9a630f364a6838990db1461e5704a0ca3a570541"
+hash = "c27237aee14c93c56fb785cd17516d90cb34eabd"
 mode = "metadata:curseforge"
 
 [update]
 [update.curseforge]
-file-id = 4768259
+file-id = 4833900
 project-id = 704465
