--- a/mods/create-enchantment-industry.pw.toml
+++ b/mods/create-enchantment-industry.pw.toml
@@ -1,13 +1,13 @@
 name = "Create Enchantment Industry"
-filename = "create_enchantment_industry-1.20.1-for-create-0.5.1.e-1.2.7.f.jar"
+filename = "create_enchantment_industry-1.20.1-for-create-0.5.1.f-1.2.7.g.jar"
 side = "both"
 
 [download]
 hash-format = "sha1"
-hash = "41f537bbc7117989f3b5cda0aaa56c57fd733985"
+hash = "51f2f3d76e013abd163ec7b203b12d7a4bafe575"
 mode = "metadata:curseforge"
 
 [update]
 [update.curseforge]
-file-id = 4814356
+file-id = 4836884
 project-id = 688768
