--- a/mods/dramatic-doors.pw.toml
+++ b/mods/dramatic-doors.pw.toml
@@ -1,13 +1,13 @@
 name = "Dramatic Doors"
-filename = "DramaticDoors-QuiFabrge-1.20.1-3.1.3.jar"
+filename = "DramaticDoors-QuiFabrge-1.20.1-3.1.3_2.jar"
 side = "both"
 
 [download]
 hash-format = "sha1"
-hash = "1e51f319ae13a72b669deff01ffa0ef5c5d00644"
+hash = "806baa0c9f99ab38aee298fc4d993710800ccba6"
 mode = "metadata:curseforge"
 
 [update]
 [update.curseforge]
-file-id = 4831245
+file-id = 4836124
 project-id = 380617
