--- a/mods/rechiseled.pw.toml
+++ b/mods/rechiseled.pw.toml
@@ -1,13 +1,13 @@
 name = "Rechiseled"
-filename = "rechiseled-1.1.5a-forge-mc1.20.jar"
+filename = "rechiseled-1.1.5b-forge-mc1.20.jar"
 side = "both"
 
 [download]
 hash-format = "sha1"
-hash = "a02efe1ad21ae9027d0d3bf13307a5db436e2b6b"
+hash = "aa6cd95b35c9799e36dea53eea3a227e429cfeeb"
 mode = "metadata:curseforge"
 
 [update]
 [update.curseforge]
-file-id = 4811802
+file-id = 4836009
 project-id = 558998
