--- a/mods/welcome-to-meadow.pw.toml
+++ b/mods/welcome-to-meadow.pw.toml
@@ -1,13 +1,13 @@
 name = "[Let's Do] Meadow"
-filename = "letsdo-meadow-forge-1.3.2.jar"
+filename = "letsdo-meadow-forge-1.3.3b.jar"
 side = "both"
 
 [download]
 hash-format = "sha1"
-hash = "3c4c87f100f49e9f8b5fcc4ace9c622365ecaab8"
+hash = "d17b7de75ff670e0b7eb51abf0518f6eca85cd4a"
 mode = "metadata:curseforge"
 
 [update]
 [update.curseforge]
-file-id = 4834459
+file-id = 4866494
 project-id = 821483
