--- a/mods/dramatic-doors.pw.toml
+++ b/mods/dramatic-doors.pw.toml
@@ -1,13 +1,13 @@
 name = "Dramatic Doors"
-filename = "DramaticDoors-QuiFabrge-1.20.1-3.1.3_3.jar"
+filename = "DramaticDoors-QuiFabrge-1.20.1-3.1.5.jar"
 side = "both"
 
 [download]
 hash-format = "sha1"
-hash = "74d5ae389715a3e0548ca610972406cd0e3a0585"
+hash = "4bd405174148f3b7eddad1f7ab4156440777aa89"
 mode = "metadata:curseforge"
 
 [update]
 [update.curseforge]
-file-id = 4841021
+file-id = 4870748
 project-id = 380617
