--- a/mods/interiors.pw.toml
+++ b/mods/interiors.pw.toml
@@ -1,13 +1,13 @@
 name = "Create: Interiors"
-filename = "interiors-0.5-30+mc1.20.1.jar"
+filename = "interiors-0.5.2+mc1.20.1-FORGE.jar"
 side = "both"
 
 [download]
 hash-format = "sha1"
-hash = "bd64eb4cee636670730f3d278d365f3388f450b3"
+hash = "c55cb7e71e756f14b10a0b4404acbfaab515121e"
 mode = "metadata:curseforge"
 
 [update]
 [update.curseforge]
-file-id = 4835269
+file-id = 4875877
 project-id = 906239
