--- a/mods/rechiseled.pw.toml
+++ b/mods/rechiseled.pw.toml
@@ -1,13 +1,13 @@
 name = "Rechiseled"
-filename = "rechiseled-1.1.5b-forge-mc1.20.jar"
+filename = "rechiseled-1.1.5c-forge-mc1.20.jar"
 side = "both"
 
 [download]
 hash-format = "sha1"
-hash = "aa6cd95b35c9799e36dea53eea3a227e429cfeeb"
+hash = "371e113c52b09389c05624c694165ca24b4f2ede"
 mode = "metadata:curseforge"
 
 [update]
 [update.curseforge]
-file-id = 4836009
+file-id = 4872892
 project-id = 558998
