--- a/mods/welcome-to-meadow.pw.toml
+++ b/mods/welcome-to-meadow.pw.toml
@@ -1,13 +1,13 @@
 name = "[Let's Do] Meadow"
-filename = "letsdo-meadow-forge-1.3.3b.jar"
+filename = "letsdo-meadow-forge-1.3.3c.jar"
 side = "both"
 
 [download]
 hash-format = "sha1"
-hash = "d17b7de75ff670e0b7eb51abf0518f6eca85cd4a"
+hash = "f2a1d4ce70994d9c992b46f17b9b2a6507845614"
 mode = "metadata:curseforge"
 
 [update]
 [update.curseforge]
-file-id = 4866494
+file-id = 4871109
 project-id = 821483
