--- a/mods/structure-gel-api.pw.toml
+++ b/mods/structure-gel-api.pw.toml
@@ -1,13 +1,13 @@
 name = "Structure Gel API"
-filename = "structure_gel-1.20.1-2.15.0.jar"
+filename = "structure_gel-1.20.1-2.15.1.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/T8TGycIQ/versions/DjvKx9sL/structure_gel-1.20.1-2.15.0.jar"
+url = "https://cdn.modrinth.com/data/T8TGycIQ/versions/p2hBgWM7/structure_gel-1.20.1-2.15.1.jar"
 hash-format = "sha1"
-hash = "3d8af72485b99cbf646a80b85cae596d0cfda9d7"
+hash = "3a5cc923bb25426f978c3542560a10eaa0e77fdc"
 
 [update]
 [update.modrinth]
 mod-id = "T8TGycIQ"
-version = "DjvKx9sL"
+version = "p2hBgWM7"
