--- a/mods/create-dreams-and-desires.pw.toml
+++ b/mods/create-dreams-and-desires.pw.toml
@@ -1,13 +1,13 @@
 name = "Create: Dreams & Desires"
-filename = "Create-Dreams-n-Desires-1.20.1-0.2b.PREBETA.jar"
+filename = "Create-Dreams-n-Desires-1.20.1-0.2c.PREBETA.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/JmybsfWs/versions/qgrM6bNk/Create-Dreams-n-Desires-1.20.1-0.2b.PREBETA.jar"
+url = "https://cdn.modrinth.com/data/JmybsfWs/versions/4zjj5Jhw/Create-Dreams-n-Desires-1.20.1-0.2c.PREBETA.jar"
 hash-format = "sha1"
-hash = "bf248a90a925f83df803c92c27ee8b75e28ce891"
+hash = "008d66ed08847bd06fe23641aca6ab9f1edfab32"
 
 [update]
 [update.modrinth]
 mod-id = "JmybsfWs"
-version = "qgrM6bNk"
+version = "4zjj5Jhw"
