--- a/mods/aether.pw.toml
+++ b/mods/aether.pw.toml
@@ -1,13 +1,13 @@
 name = "The Aether"
-filename = "aether-1.20.1-1.0.0-beta.2-neoforge.jar"
+filename = "aether-1.20.1-1.0.0-beta.2.1-neoforge.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/YhmgMVyu/versions/oFts6eUq/aether-1.20.1-1.0.0-beta.2-neoforge.jar"
+url = "https://cdn.modrinth.com/data/YhmgMVyu/versions/aazX8Jbo/aether-1.20.1-1.0.0-beta.2.1-neoforge.jar"
 hash-format = "sha1"
-hash = "49d59f9c8859c1812ee5a29b87331368b8c4c350"
+hash = "95d5f734bb19f97d5a4e1ebfc903380e01f9698f"
 
 [update]
 [update.modrinth]
 mod-id = "YhmgMVyu"
-version = "oFts6eUq"
+version = "aazX8Jbo"
