--- a/mods/aether.pw.toml
+++ b/mods/aether.pw.toml
@@ -1,13 +1,13 @@
 name = "The Aether"
-filename = "aether-1.20.1-1.0.0-beta.2.1-neoforge.jar"
+filename = "aether-1.20.1-1.0.0-neoforge.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/YhmgMVyu/versions/aazX8Jbo/aether-1.20.1-1.0.0-beta.2.1-neoforge.jar"
+url = "https://cdn.modrinth.com/data/YhmgMVyu/versions/XDQGJb0B/aether-1.20.1-1.0.0-neoforge.jar"
 hash-format = "sha1"
-hash = "95d5f734bb19f97d5a4e1ebfc903380e01f9698f"
+hash = "d2b7441c030ecbf22a0a598a9db20677b059ad22"
 
 [update]
 [update.modrinth]
 mod-id = "YhmgMVyu"
-version = "aazX8Jbo"
+version = "XDQGJb0B"
