--- a/mods/craterlib.pw.toml
+++ b/mods/craterlib.pw.toml
@@ -1,13 +1,13 @@
 name = "CraterLib"
-filename = "CraterLib-forge-1.20-1.0.2.jar"
+filename = "CraterLib-Forge-1.20-1.1.0.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/Nn8Wasaq/versions/Ml4m8ilJ/CraterLib-forge-1.20-1.0.2.jar"
+url = "https://cdn.modrinth.com/data/Nn8Wasaq/versions/sym8NBXL/CraterLib-Forge-1.20-1.1.0.jar"
 hash-format = "sha1"
-hash = "120cf728034a6df7a8fab9e8e3a0b9d62b431793"
+hash = "d1189ec012bf7bb7e6476d75beab8d33afa16112"
 
 [update]
 [update.modrinth]
 mod-id = "Nn8Wasaq"
-version = "Ml4m8ilJ"
+version = "sym8NBXL"
