--- a/mods/sdlink.pw.toml
+++ b/mods/sdlink.pw.toml
@@ -1,13 +1,13 @@
 name = "Simple Discord Link"
-filename = "SimpleDiscordLink-Combo-1.20-3.0.0.jar"
+filename = "SimpleDiscordLink-Combo-1.20-3.0.1.jar"
 side = "server"
 
 [download]
-url = "https://cdn.modrinth.com/data/Sh0YauEf/versions/FrWZgcNC/SimpleDiscordLink-Combo-1.20-3.0.0.jar"
+url = "https://cdn.modrinth.com/data/Sh0YauEf/versions/rtVmg0Ey/SimpleDiscordLink-Combo-1.20-3.0.1.jar"
 hash-format = "sha1"
-hash = "b52b46bd1335f3a6a61e716230458d21b3ca5f9f"
+hash = "f5b24f6363d40b1318fc309eb2405d6e6e3ace22"
 
 [update]
 [update.modrinth]
 mod-id = "Sh0YauEf"
-version = "FrWZgcNC"
+version = "rtVmg0Ey"
