--- a/mods/when-dungeons-arise.pw.toml
+++ b/mods/when-dungeons-arise.pw.toml
@@ -1,13 +1,13 @@
 name = "When Dungeons Arise - Forge!"
-filename = "DungeonsArise-1.20.1-2.1.57-release.jar"
+filename = "DungeonsArise-1.20.x-2.1.58-release.jar"
 side = "both"
 
 [download]
 hash-format = "sha1"
-hash = "1bc95d13cf8208c5cfe100a001d6b078d15742f7"
+hash = "30b4520e4fab40a6bb6153a2c72e34bcb721f0a5"
 mode = "metadata:curseforge"
 
 [update]
 [update.curseforge]
-file-id = 4798432
+file-id = 4983862
 project-id = 442508
