24 mod updates/changes

--- a/mods/moonlight.pw.toml
+++ b/mods/moonlight.pw.toml
@@ -3,11 +3,11 @@ filename = "moonlight-1.20-2.8.84-forge.jar"
 side = "both"
 
 [download]
+url = "https://cdn.modrinth.com/data/twkfQtEc/versions/6AG0cMX6/moonlight-1.20-2.8.84-forge.jar"
 hash-format = "sha1"
 hash = "880fc525582b01bdf3223d55836ce42f218e0ca7"
-mode = "metadata:curseforge"
 
 [update]
-[update.curseforge]
-file-id = 5039851
-project-id = 499980
+[update.modrinth]
+mod-id = "twkfQtEc"
+version = "6AG0cMX6"
