--- a/mods/aether.pw.toml
+++ b/mods/aether.pw.toml
@@ -1,13 +1,13 @@
 name = "The Aether"
-filename = "aether-1.20.1-1.0.0-neoforge.jar"
+filename = "aether-1.20.1-1.1.0-neoforge.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/YhmgMVyu/versions/XDQGJb0B/aether-1.20.1-1.0.0-neoforge.jar"
+url = "https://cdn.modrinth.com/data/YhmgMVyu/versions/6caduFoz/aether-1.20.1-1.1.0-neoforge.jar"
 hash-format = "sha1"
-hash = "d2b7441c030ecbf22a0a598a9db20677b059ad22"
+hash = "7ea39e252a9b876e14014a567e83a47b3bcce123"
 
 [update]
 [update.modrinth]
 mod-id = "YhmgMVyu"
-version = "XDQGJb0B"
+version = "6caduFoz"
