--- a/mods/aether.pw.toml
+++ b/mods/aether.pw.toml
@@ -1,13 +1,13 @@
 name = "The Aether"
-filename = "aether-1.20.1-1.1.0-neoforge.jar"
+filename = "aether-1.20.1-1.2.0-neoforge.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/YhmgMVyu/versions/6caduFoz/aether-1.20.1-1.1.0-neoforge.jar"
+url = "https://cdn.modrinth.com/data/YhmgMVyu/versions/Ut5cSfTf/aether-1.20.1-1.2.0-neoforge.jar"
 hash-format = "sha1"
-hash = "7ea39e252a9b876e14014a567e83a47b3bcce123"
+hash = "8ae6ab2169d102738f0951068ca5241661d72cc6"
 
 [update]
 [update.modrinth]
 mod-id = "YhmgMVyu"
-version = "6caduFoz"
+version = "Ut5cSfTf"
