--- a/mods/doespotatotick.pw.toml
+++ b/mods/doespotatotick.pw.toml
@@ -1,13 +1,13 @@
 name = "DoesPotatoTick?"
-filename = "does_potato_tick-1.20.1-3.7.0.jar"
+filename = "doespotatotick-1.20.1-4.0.2.jar"
 side = "both"
 
 [download]
 hash-format = "sha1"
-hash = "fddb8477135a1e38e32f6a92171cf36194e153dd"
+hash = "0fe85bd731c8e7b15cd670342329e15721cb6d64"
 mode = "metadata:curseforge"
 
 [update]
 [update.curseforge]
-file-id = 4810276
+file-id = 5101473
 project-id = 825355
