--- a/mods/lootr.pw.toml
+++ b/mods/lootr.pw.toml
@@ -1,13 +1,13 @@
-name = "Lootr (Forge)"
-filename = "lootr-1.20-0.7.30.73.jar"
+name = "Lootr (Forge & NeoForge)"
+filename = "lootr-1.20-0.7.31.78.jar"
 side = "both"
 
 [download]
 hash-format = "sha1"
-hash = "d435ec7cca33d7fd882f709fb452339059e0c62c"
+hash = "0aaceae6c0343501a2f1b17687ef47610b11ff46"
 mode = "metadata:curseforge"
 
 [update]
 [update.curseforge]
-file-id = 4608503
+file-id = 5082091
 project-id = 361276
