--- a/mods/moonlight.pw.toml
+++ b/mods/moonlight.pw.toml
@@ -1,13 +1,13 @@
 name = "Moonlight Lib"
-filename = "moonlight-1.20-2.8.84-forge.jar"
+filename = "moonlight-1.20-2.9.17-forge.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/twkfQtEc/versions/6AG0cMX6/moonlight-1.20-2.8.84-forge.jar"
+url = "https://cdn.modrinth.com/data/twkfQtEc/versions/rL76IQAG/moonlight-1.20-2.9.17-forge.jar"
 hash-format = "sha1"
-hash = "880fc525582b01bdf3223d55836ce42f218e0ca7"
+hash = "7eca1d52d8a4f3d09431dcefa0e0beca11c02ffa"
 
 [update]
 [update.modrinth]
 mod-id = "twkfQtEc"
-version = "6AG0cMX6"
+version = "rL76IQAG"
