--- a/mods/vinery.pw.toml
+++ b/mods/vinery.pw.toml
@@ -1,13 +1,13 @@
 name = "[Let's Do] Vinery"
-filename = "letsdo-vinery-1.4.7-forge.jar"
+filename = "letsdo-vinery-forge-1.4.8.jar"
 side = "both"
 
 [download]
 hash-format = "sha1"
-hash = "18f10a28cd8bc32c34a044768d586ee0e2e04f47"
+hash = "bfa32e58806570c5511b6d74f3b3ed4edebebe7b"
 mode = "metadata:curseforge"
 
 [update]
 [update.curseforge]
-file-id = 4932395
+file-id = 5092323
 project-id = 704465
