--- a/mods/moonlight.pw.toml
+++ b/mods/moonlight.pw.toml
@@ -1,13 +1,13 @@
 name = "Moonlight Lib"
-filename = "moonlight-1.20-2.11.2-forge.jar"
+filename = "moonlight-1.20-2.11.3-forge.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/twkfQtEc/versions/CV8lDNyD/moonlight-1.20-2.11.2-forge.jar"
+url = "https://cdn.modrinth.com/data/twkfQtEc/versions/2O5fg0oB/moonlight-1.20-2.11.3-forge.jar"
 hash-format = "sha1"
-hash = "93832294a0b8a6166c2cb478423d79afc8381b48"
+hash = "dcde0396367abfa748c01e1f3904dadf543e918a"
 
 [update]
 [update.modrinth]
 mod-id = "twkfQtEc"
-version = "CV8lDNyD"
+version = "2O5fg0oB"
