--- a/mods/welcome-to-meadow.pw.toml
+++ b/mods/welcome-to-meadow.pw.toml
@@ -1,13 +1,13 @@
 name = "[Let's Do] Meadow"
-filename = "letsdo-meadow-forge-1.3.4.jar"
+filename = "letsdo-meadow-forge-1.3.5-1.jar"
 side = "both"
 
 [download]
 hash-format = "sha1"
-hash = "1495685ca360fedbe038f4abaa780312066a66e3"
+hash = "8b6b022cfa6cb1ec1a73df6f8de3a7a4f7383c80"
 mode = "metadata:curseforge"
 
 [update]
 [update.curseforge]
-file-id = 5017304
+file-id = 5176290
 project-id = 821483
