--- a/mods/do-api.pw.toml
+++ b/mods/do-api.pw.toml
@@ -1,13 +1,13 @@
 name = "[Let's Do] API "
-filename = "doapi-1.2.8-forge.jar"
+filename = "letsdo-API-forge-1.2.9-forge.jar"
 side = "both"
 
 [download]
 hash-format = "sha1"
-hash = "846641389941c33d8fef8f7655f012b631b701f4"
+hash = "66169eab12eb104968065182d050b59b515b1de8"
 mode = "metadata:curseforge"
 
 [update]
 [update.curseforge]
-file-id = 4833128
+file-id = 5205393
 project-id = 864599
