--- a/mods/beachparty.pw.toml
+++ b/mods/beachparty.pw.toml
@@ -1,13 +1,13 @@
 name = "[Let's Do] Beachparty"
-filename = "letsdo-beachparty-forge-1.1.3.jar"
+filename = "letsdo-beachparty-forge-1.1.4-1.jar"
 side = "both"
 
 [download]
 hash-format = "sha1"
-hash = "aed0e8e601f59ba618ec6e18e97e2019c4314271"
+hash = "6bdbb3e9b7d39854cb91816dc7eb71e28a075b65"
 mode = "metadata:curseforge"
 
 [update]
 [update.curseforge]
-file-id = 4984446
+file-id = 5206094
 project-id = 858691
