--- a/mods/every-compat.pw.toml
+++ b/mods/every-compat.pw.toml
@@ -1,13 +1,13 @@
 name = "Every Compat (Wood Good)"
-filename = "everycomp-1.20-2.6.37.jar"
+filename = "everycomp-1.20-2.6.38.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/eiktJyw1/versions/JNIYHmnq/everycomp-1.20-2.6.37.jar"
+url = "https://cdn.modrinth.com/data/eiktJyw1/versions/H6R4pqur/everycomp-1.20-2.6.38.jar"
 hash-format = "sha1"
-hash = "5ded75681413c2cef57c1182f5b463a5c533273b"
+hash = "3c77127beff2c34d0bd490025492a81950b65035"
 
 [update]
 [update.modrinth]
 mod-id = "eiktJyw1"
-version = "JNIYHmnq"
+version = "H6R4pqur"
