--- a/mods/lets-do-candlelight.pw.toml
+++ b/mods/lets-do-candlelight.pw.toml
@@ -1,13 +1,13 @@
 name = "[Let's Do] Candlelight"
-filename = "letsdo-candlelight-forge-1.2.8.jar"
+filename = "letsdo-candlelight-forge-1.2.9-1.jar"
 side = "both"
 
 [download]
 hash-format = "sha1"
-hash = "104ab669dbd59d6ac9eb61afcf5b8554847819b8"
+hash = "efddf09a3b96a832e2c68c760cc6349e108d1f01"
 mode = "metadata:curseforge"
 
 [update]
 [update.curseforge]
-file-id = 4994990
+file-id = 5205756
 project-id = 846962
