--- a/mods/every-compat.pw.toml
+++ b/mods/every-compat.pw.toml
@@ -1,13 +1,13 @@
 name = "Every Compat (Wood Good)"
-filename = "everycomp-1.20-2.6.38.jar"
+filename = "everycomp-1.20-2.6.39.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/eiktJyw1/versions/H6R4pqur/everycomp-1.20-2.6.38.jar"
+url = "https://cdn.modrinth.com/data/eiktJyw1/versions/LJEv0MAv/everycomp-1.20-2.6.39.jar"
 hash-format = "sha1"
-hash = "3c77127beff2c34d0bd490025492a81950b65035"
+hash = "423624f355f961330eec7ad35029444363c6a321"
 
 [update]
 [update.modrinth]
 mod-id = "eiktJyw1"
-version = "H6R4pqur"
+version = "LJEv0MAv"
