--- a/mods/create-enchantment-industry.pw.toml
+++ b/mods/create-enchantment-industry.pw.toml
@@ -1,13 +1,13 @@
 name = "Create Enchantment Industry"
-filename = "create_enchantment_industry-1.20.1-for-create-0.5.1.f-1.2.8.jar"
+filename = "create_enchantment_industry-1.20.1-for-create-0.5.1.f-1.2.9.c.jar"
 side = "both"
 
 [download]
 hash-format = "sha1"
-hash = "4df304e7a8fde14f4b219413a7f633bcd1e62595"
+hash = "87468693ed6aed6b96640c39edd49ceb5b076414"
 mode = "metadata:curseforge"
 
 [update]
 [update.curseforge]
-file-id = 5131586
+file-id = 5228875
 project-id = 688768
