--- a/mods/every-compat.pw.toml
+++ b/mods/every-compat.pw.toml
@@ -1,13 +1,13 @@
 name = "Every Compat (Wood Good)"
-filename = "everycomp-1.20-2.6.49.jar"
+filename = "everycomp-1.20-2.6.52.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/eiktJyw1/versions/AdMHFjMo/everycomp-1.20-2.6.49.jar"
+url = "https://cdn.modrinth.com/data/eiktJyw1/versions/SmBtxSKf/everycomp-1.20-2.6.52.jar"
 hash-format = "sha1"
-hash = "f8eed0166cabd65a8bddd7ab7465c05c90d88b3a"
+hash = "f2bf4617ee85894f1f8b6f1efaa6d028133805d0"
 
 [update]
 [update.modrinth]
 mod-id = "eiktJyw1"
-version = "AdMHFjMo"
+version = "SmBtxSKf"
