--- a/mods/modernfix.pw.toml
+++ b/mods/modernfix.pw.toml
@@ -1,13 +1,13 @@
 name = "ModernFix"
-filename = "modernfix-forge-5.15.0+mc1.20.1.jar"
+filename = "modernfix-forge-5.16.1+mc1.20.1.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/nmDcB62a/versions/u1FOqNCn/modernfix-forge-5.15.0%2Bmc1.20.1.jar"
+url = "https://cdn.modrinth.com/data/nmDcB62a/versions/2Rr52SPW/modernfix-forge-5.16.1%2Bmc1.20.1.jar"
 hash-format = "sha1"
-hash = "858abf884131d30e6c9c8a51e226b1bc6b83318a"
+hash = "459194d7846e6ad981dfde427eb6ee64e8dc1e0b"
 
 [update]
 [update.modrinth]
 mod-id = "nmDcB62a"
-version = "u1FOqNCn"
+version = "2Rr52SPW"
