--- a/mods/leaky.pw.toml
+++ b/mods/leaky.pw.toml
@@ -1,13 +1,13 @@
-name = "Leaky - Farm leak detection[Forge/Fabric]"
-filename = "leaky-1.20.1-1.7.jar"
+name = "Leaky - Item Lag Fix[Forge/Fabric]"
+filename = "leaky-1.20.1-2.0.jar"
 side = "both"
 
 [download]
 hash-format = "sha1"
-hash = "8a185ead0ab1c9f38bf3a20d452556a0173d5c9f"
+hash = "450eccc578493fa4922aacad2587c76ae6c10c22"
 mode = "metadata:curseforge"
 
 [update]
 [update.curseforge]
-file-id = 4765805
+file-id = 5291546
 project-id = 856906
