steam deck update test

--- a/mods/advancementjs.pw.toml
+++ b/mods/advancementjs.pw.toml
@@ -1,13 +1,13 @@
 name = "AdvancementJS"
-filename = "AdvJS-2001forge-2.9.2.jar"
+filename = "AdvJS-2001forge-2.9.3-hotfix.jar"
 side = "both"
 
 [download]
 hash-format = "sha1"
-hash = "9d1a09fe5c3a25b8aedd42a6b6453fd8ac9c21f1"
+hash = "091fb2e1f87b1be58d3337610fa761320eb3c47d"
 mode = "metadata:curseforge"
 
 [update]
 [update.curseforge]
-file-id = 5158956
+file-id = 5326238
 project-id = 962731
