--- a/mods/amendments.pw.toml
+++ b/mods/amendments.pw.toml
@@ -1,13 +1,13 @@
 name = "amendments"
-filename = "amendments-1.20-1.1.22.jar"
+filename = "amendments-1.20-1.1.27.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/6iTJugQR/versions/2mgTSWBo/amendments-1.20-1.1.22.jar"
+url = "https://cdn.modrinth.com/data/6iTJugQR/versions/VP4eAvpQ/amendments-1.20-1.1.27.jar"
 hash-format = "sha1"
-hash = "377c8fec7c4a8ca81af9bc129d48053ea0800e88"
+hash = "a85727264b57cce44668e14c568215ba4c269133"
 
 [update]
 [update.modrinth]
 mod-id = "6iTJugQR"
-version = "2mgTSWBo"
+version = "VP4eAvpQ"
