--- a/mods/moonlight.pw.toml
+++ b/mods/moonlight.pw.toml
@@ -1,13 +1,13 @@
 name = "Moonlight Lib"
-filename = "moonlight-1.20-2.11.12-forge.jar"
+filename = "moonlight-1.20-2.11.18-forge.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/twkfQtEc/versions/cdNu7PK8/moonlight-1.20-2.11.12-forge.jar"
+url = "https://cdn.modrinth.com/data/twkfQtEc/versions/Funmd64I/moonlight-1.20-2.11.18-forge.jar"
 hash-format = "sha1"
-hash = "65ca95bce49fc3e946b34de68da53cb2c177a78a"
+hash = "4f3d39647c4426d0ea32e3abaf262cfe962bef96"
 
 [update]
 [update.modrinth]
 mod-id = "twkfQtEc"
-version = "cdNu7PK8"
+version = "Funmd64I"
