--- a/mods/moonlight.pw.toml
+++ b/mods/moonlight.pw.toml
@@ -1,13 +1,13 @@
 name = "Moonlight Lib"
-filename = "moonlight-1.20-2.11.18-forge.jar"
+filename = "moonlight-1.20-2.11.22-forge.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/twkfQtEc/versions/Funmd64I/moonlight-1.20-2.11.18-forge.jar"
+url = "https://cdn.modrinth.com/data/twkfQtEc/versions/uv4zha4H/moonlight-1.20-2.11.22-forge.jar"
 hash-format = "sha1"
-hash = "4f3d39647c4426d0ea32e3abaf262cfe962bef96"
+hash = "c3cdb2fcb851cfe13f840dca279239f92416f0cc"
 
 [update]
 [update.modrinth]
 mod-id = "twkfQtEc"
-version = "Funmd64I"
+version = "uv4zha4H"
