--- a/mods/every-compat.pw.toml
+++ b/mods/every-compat.pw.toml
@@ -1,13 +1,13 @@
 name = "Every Compat (Wood Good)"
-filename = "everycomp-1.20-2.6.55.jar"
+filename = "everycomp-1.20-2.6.58.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/eiktJyw1/versions/UcNI6KkG/everycomp-1.20-2.6.55.jar"
+url = "https://cdn.modrinth.com/data/eiktJyw1/versions/Z4SIQfB8/everycomp-1.20-2.6.58.jar"
 hash-format = "sha1"
-hash = "dfb56c2a8342a24605080a492487474218d54259"
+hash = "1cd46b8c4cc5cb8e57af81786b8441d0cee91461"
 
 [update]
 [update.modrinth]
 mod-id = "eiktJyw1"
-version = "UcNI6KkG"
+version = "Z4SIQfB8"
