--- a/mods/moonlight.pw.toml
+++ b/mods/moonlight.pw.toml
@@ -1,13 +1,13 @@
 name = "Moonlight Lib"
-filename = "moonlight-1.20-2.11.22-forge.jar"
+filename = "moonlight-1.20-2.11.33-forge.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/twkfQtEc/versions/uv4zha4H/moonlight-1.20-2.11.22-forge.jar"
+url = "https://cdn.modrinth.com/data/twkfQtEc/versions/mPucwDCq/moonlight-1.20-2.11.33-forge.jar"
 hash-format = "sha1"
-hash = "c3cdb2fcb851cfe13f840dca279239f92416f0cc"
+hash = "d34e0469f84f15778be9071d38056d78f8df8f99"
 
 [update]
 [update.modrinth]
 mod-id = "twkfQtEc"
-version = "uv4zha4H"
+version = "mPucwDCq"
