--- a/mods/packet-fixer.pw.toml
+++ b/mods/packet-fixer.pw.toml
@@ -1,13 +1,13 @@
 name = "Packet Fixer"
-filename = "packetfixer-forge-1.3.2-1.19-to-1.20.1.jar"
+filename = "packetfixer-forge-1.4.0-1.19-to-1.20.1.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/c7m1mi73/versions/So2Pt1Vd/packetfixer-forge-1.3.2-1.19-to-1.20.1.jar"
+url = "https://cdn.modrinth.com/data/c7m1mi73/versions/Ero7kHKR/packetfixer-forge-1.4.0-1.19-to-1.20.1.jar"
 hash-format = "sha1"
-hash = "975bd2268dc63926a65824cbe7bd65d6446a53d4"
+hash = "bff94fc4c6dfc0854f50bcfee8037826cf953e93"
 
 [update]
 [update.modrinth]
 mod-id = "c7m1mi73"
-version = "So2Pt1Vd"
+version = "Ero7kHKR"
