--- a/mods/ender-io.pw.toml
+++ b/mods/ender-io.pw.toml
@@ -1,13 +1,13 @@
 name = "Ender IO"
-filename = "EnderIO-1.20.1-6.0.25-alpha.jar"
+filename = "EnderIO-1.20.1-6.1.6-beta-all.jar"
 side = "both"
 
 [download]
 hash-format = "sha1"
-hash = "28b33196c7e6b9b1fb0aec45686f1b963181de2f"
+hash = "a3c8ead8c9a8cda8288bbfc6380471b768251e98"
 mode = "metadata:curseforge"
 
 [update]
 [update.curseforge]
-file-id = 5171872
+file-id = 5517990
 project-id = 64578
