--- a/mods/moonlight.pw.toml
+++ b/mods/moonlight.pw.toml
@@ -1,13 +1,13 @@
 name = "Moonlight Lib"
-filename = "moonlight-1.20-2.11.33-forge.jar"
+filename = "moonlight-1.20-2.12.6-forge.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/twkfQtEc/versions/mPucwDCq/moonlight-1.20-2.11.33-forge.jar"
+url = "https://cdn.modrinth.com/data/twkfQtEc/versions/f9krL6Yf/moonlight-1.20-2.12.6-forge.jar"
 hash-format = "sha1"
-hash = "d34e0469f84f15778be9071d38056d78f8df8f99"
+hash = "21ea68aba6f9fa6c576bc9b6778790caa40ae9cc"
 
 [update]
 [update.modrinth]
 mod-id = "twkfQtEc"
-version = "mPucwDCq"
+version = "f9krL6Yf"
