--- a/mods/amendments.pw.toml
+++ b/mods/amendments.pw.toml
@@ -1,13 +1,13 @@
 name = "amendments"
-filename = "amendments-1.20-1.2.4.jar"
+filename = "amendments-1.20-1.2.8.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/6iTJugQR/versions/Bn6pXTB5/amendments-1.20-1.2.4.jar"
+url = "https://cdn.modrinth.com/data/6iTJugQR/versions/rygiK2go/amendments-1.20-1.2.8.jar"
 hash-format = "sha1"
-hash = "f14c3716176aed14fb7a156bb71204fa62c224c8"
+hash = "f149a86d48d3830679754d1921c7e80831c19291"
 
 [update]
 [update.modrinth]
 mod-id = "6iTJugQR"
-version = "Bn6pXTB5"
+version = "rygiK2go"
