--- a/mods/explorify.pw.toml
+++ b/mods/explorify.pw.toml
@@ -1,13 +1,13 @@
 name = "Explorify – Dungeons & Structures"
-filename = "explorify-v1.4.0.jar"
+filename = "Explorify v1.6.1 f10-48.jar"
 side = "both"
 
 [download]
 hash-format = "sha1"
-hash = "dd28a037daff1ba5785a482cd714fffa4fa40765"
+hash = "9c4cf5349f2fb6229d20cfa5008f82f512258b73"
 mode = "metadata:curseforge"
 
 [update]
 [update.curseforge]
-file-id = 5277999
+file-id = 5482463
 project-id = 698309
