--- a/mods/food-effect-tooltips-forge.pw.toml
+++ b/mods/food-effect-tooltips-forge.pw.toml
@@ -1,13 +1,13 @@
 name = "Food Effect Tooltips (Forge)"
-filename = "foodeffecttooltips-1.0.1+forge-1.20.jar.jar"
+filename = "foodeffecttooltips+forge-1.20.1-1.3.0.jar"
 side = "both"
 
 [download]
 hash-format = "sha1"
-hash = "f894a91b230a60e086f7ff415b531a44c8445997"
+hash = "032c0ce96e81a967784c378e92e3cd499cca0f09"
 mode = "metadata:curseforge"
 
 [update]
 [update.curseforge]
-file-id = 4602215
+file-id = 5411412
 project-id = 776426
