--- a/mods/justenoughbreeding.pw.toml
+++ b/mods/justenoughbreeding.pw.toml
@@ -1,13 +1,13 @@
 name = "Just Enough Breeding (JEBr)"
-filename = "justenoughbreeding-forge-1.20.x-1.2.1.jar"
+filename = "justenoughbreeding-neoforge-1.20.1-1.3.0.jar"
 side = "both"
 
 [download]
 hash-format = "sha1"
-hash = "b00f42235859d1effda49cd79cf709afbeba9b67"
+hash = "ab3c233f0214b18429e620cb9011b8b0cb69743e"
 mode = "metadata:curseforge"
 
 [update]
 [update.curseforge]
-file-id = 5224495
+file-id = 5534885
 project-id = 899386
