--- a/mods/modernfix.pw.toml
+++ b/mods/modernfix.pw.toml
@@ -1,13 +1,13 @@
 name = "ModernFix"
-filename = "modernfix-forge-5.18.0+mc1.20.1.jar"
+filename = "modernfix-forge-5.18.9+mc1.20.1.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/nmDcB62a/versions/o1xUnPS2/modernfix-forge-5.18.0%2Bmc1.20.1.jar"
+url = "https://cdn.modrinth.com/data/nmDcB62a/versions/2U36f0dT/modernfix-forge-5.18.9%2Bmc1.20.1.jar"
 hash-format = "sha1"
-hash = "26f62819c4c833c0e67e4a34aa551e7f29aa6dd7"
+hash = "b8c02cdc687d4e2030860eb44279ba78c015eee0"
 
 [update]
 [update.modrinth]
 mod-id = "nmDcB62a"
-version = "o1xUnPS2"
+version = "2U36f0dT"
