--- a/mods/simple-discord-link-bot-forge-fabric-spigot.pw.toml
+++ b/mods/simple-discord-link-bot-forge-fabric-spigot.pw.toml
@@ -1,13 +1,13 @@
 name = "Simple Discord Link Bot [Forge/Fabric]"
-filename = "SimpleDiscordLink-Combo-1.20-3.0.1.jar"
+filename = "SimpleDiscordLink-Universal-3.1.3.jar"
 side = "both"
 
 [download]
 hash-format = "sha1"
-hash = "f5b24f6363d40b1318fc309eb2405d6e6e3ace22"
+hash = "5f13616de3a2954e14f1289000070f2a8b1d9541"
 mode = "metadata:curseforge"
 
 [update]
 [update.curseforge]
-file-id = 5002187
+file-id = 5521174
 project-id = 541320
