--- a/mods/moonlight.pw.toml
+++ b/mods/moonlight.pw.toml
@@ -1,13 +1,13 @@
 name = "Moonlight Lib"
-filename = "moonlight-1.20-2.12.6-forge.jar"
+filename = "moonlight-1.20-2.12.17-forge.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/twkfQtEc/versions/f9krL6Yf/moonlight-1.20-2.12.6-forge.jar"
+url = "https://cdn.modrinth.com/data/twkfQtEc/versions/dOvJC4t8/moonlight-1.20-2.12.17-forge.jar"
 hash-format = "sha1"
-hash = "21ea68aba6f9fa6c576bc9b6778790caa40ae9cc"
+hash = "e1f740f198248f04699fcf635051bebdbc9d1c3b"
 
 [update]
 [update.modrinth]
 mod-id = "twkfQtEc"
-version = "f9krL6Yf"
+version = "dOvJC4t8"
