--- a/mods/copycats.pw.toml
+++ b/mods/copycats.pw.toml
@@ -1,13 +1,13 @@
 name = "Create: Copycats+"
-filename = "copycats-1.3.8+mc.1.20.1-forge.jar"
+filename = "copycats-2.1.2+mc.1.20.1-forge.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/UT2M39wf/versions/MeMaWy4r/copycats-1.3.8%2Bmc.1.20.1-forge.jar"
+url = "https://cdn.modrinth.com/data/UT2M39wf/versions/zyXQ6jAy/copycats-2.1.2%2Bmc.1.20.1-forge.jar"
 hash-format = "sha1"
-hash = "a86d4d8dc51192a447cd8620a296cc44c7dcee4b"
+hash = "74ae3b05fa0fcc2b3f252e1748432fe0bf3fcf72"
 
 [update]
 [update.modrinth]
 mod-id = "UT2M39wf"
-version = "MeMaWy4r"
+version = "zyXQ6jAy"
