--- a/mods/corgilib.pw.toml
+++ b/mods/corgilib.pw.toml
@@ -1,13 +1,13 @@
 name = "CorgiLib"
-filename = "CorgiLib-forge-1.20.1-4.0.1.3.jar"
+filename = "Corgilib-Forge-1.20.1-4.0.3.0.jar"
 side = "both"
 
 [download]
 hash-format = "sha1"
-hash = "800e91ff2dd022cd0d4f4b9c66c7344cb76aeda2"
+hash = "f1e83ce2be72a4e9e505e06d9317aeeaec767886"
 mode = "metadata:curseforge"
 
 [update]
 [update.curseforge]
-file-id = 5436749
+file-id = 5643186
 project-id = 693313
