--- a/mods/justenoughbreeding.pw.toml
+++ b/mods/justenoughbreeding.pw.toml
@@ -1,13 +1,13 @@
 name = "Just Enough Breeding (JEBr)"
-filename = "justenoughbreeding-neoforge-1.20.1-1.3.0.jar"
+filename = "justenoughbreeding-forge-1.20.x-1.3.1.jar"
 side = "both"
 
 [download]
 hash-format = "sha1"
-hash = "ab3c233f0214b18429e620cb9011b8b0cb69743e"
+hash = "fd954088adc1a4821f739e83f78dfa1a23339634"
 mode = "metadata:curseforge"
 
 [update]
 [update.curseforge]
-file-id = 5534885
+file-id = 5666310
 project-id = 899386
