--- a/mods/sdlink.pw.toml
+++ b/mods/sdlink.pw.toml
@@ -1,13 +1,13 @@
 name = "Simple Discord Link"
-filename = "SimpleDiscordLink-Universal-3.1.3.jar"
+filename = "SimpleDiscordLink-Universal-3.1.5.jar"
 side = "server"
 
 [download]
-url = "https://cdn.modrinth.com/data/Sh0YauEf/versions/LmRVlHyB/SimpleDiscordLink-Universal-3.1.3.jar"
+url = "https://cdn.modrinth.com/data/Sh0YauEf/versions/3mNPZrbD/SimpleDiscordLink-Universal-3.1.5.jar"
 hash-format = "sha1"
-hash = "5f13616de3a2954e14f1289000070f2a8b1d9541"
+hash = "4521a35185d52e3d2442f46dc2fe68da036fd975"
 
 [update]
 [update.modrinth]
 mod-id = "Sh0YauEf"
-version = "LmRVlHyB"
+version = "3mNPZrbD"
